fix spacing, fix #597

--- a/src/app/components/stream/status/databinded-text/databinded-text.component.scss
+++ b/src/app/components/stream/status/databinded-text/databinded-text.component.scss
@@ -46,6 +46,10 @@ $expand-color: $column-color;
     }
 }
 
+.content {
+    white-space: pre-wrap;
+}
+
 
 //Mastodon styling
 :host ::ng-deep .content {
